Issue #3179540 by jwilson3: Color contrast for links in site alerts

--- a/css/components/site-alert.css
+++ b/css/components/site-alert.css
@@ -14,14 +14,23 @@
   margin-top: 1em;
 }
 
-.iu-notice.severe a,
+.iu-notice.minor a {
+  color: #143b5f;
+}
+
+.iu-notice.severe a {
+  color: #4d0f03;
+}
+
 .iu-notice.moderate a {
   color: #7A1705;
 }
 
+.iu-notice.minor a:hover,
+.iu-notice.minor a:focus,
 .iu-notice.severe a:hover,
 .iu-notice.severe a:focus,
 .iu-notice.moderate a:hover,
 .iu-notice.moderate a:focus {
-  color: #4C1213;
+  color: #000;
 }
